tests/ui/zero_generation_limit.rs
use o3::collections::SlabGeneration;

const _: SlabGeneration<0> = SlabGeneration::MIN;

fn main() {}
